Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70090

XdgShellV6.toplevelCreated no longer emits an XdgToplevelV6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.12
    • QPA: Wayland
    • None
    • Linux/Wayland

    Description

      This used to work in Qt 5.11:

      XdgShellV6 {                                                                                        
             property XdgToplevelV6 top
             onToplevelCreated: top = toplevel
      }
      

      After commit 9ebba7c3a it fails because XdgToplevelV6 refers to QWaylandXdgToplevelV6ParentClass instead of QWaylandXdgToplevelV6, which the signal emits.

      Attachments

        For Gerrit Dashboard: QTBUG-70090
        # Subject Branch Project Status CR V

        Activity

          People

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes