Fix incompatibility between QML and C++ instantiated objects

This fixes a source incompatibility introduced in 9ebba7c3a. In Qt 5.11 it was
possible to have the following code:

    XdgShellV6 {
        property XdgToplevelV6 top
        onToplevelCreated: top = toplevel
    }

After, 9ebba7c3a, however, this would fail because XdgToplevel refers to
QWaylandXdgToplevelV6ParentClass, while QWaylandXdgShellV6::toplevelCreated
emits a QWaylandXdgToplevelV6.

It would also break instanceof, i.e.:

    onToplevelCreated: console.log(toplevel instanceof XdgToplevelV6)

This patch reverts to C++ and QML using the same type (no subclassing for QML
types), but still lets the items have children in QML by putting the macro
inside each class instead.

Task-number: QTBUG-70090
Change-Id: I8efa8f68ebc4dc2289b4a9b96402b0c00d45547d
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>